changed modal position to absolute to prevent clipping

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,5 +1,5 @@
 .modal {
-    position: fixed;
+    position: absolute;
     padding: 0.3%;
     top: 2%;
     left: 50%;
